# IBS-Strategy

./: .gitignore  IBS_strategy.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
scripts/: build_readme_charts.py  build_site.py
src/ibs_strategy/: __init__.py  __main__.py  backtest.py  cli.py  data.py  edge.py  live.py  metrics.py  optimize.py  synthetic.py  visualize.py  web.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_data.py  test_edge.py  test_live.py  test_metrics.py  test_optimize.py  test_synthetic.py  test_visualize.py  test_web.py
